# KanNBan

./: .gitmodules  CMakeLists.txt  LICENSE  logger.hpp  main.cpp
.github/workflows/: cmake.yml
Logger/: handles.hpp  helper.hpp  logger.hpp  main.cpp
resources/: config.json
src/: CMakeLists.txt  main.cpp
src/config/: config.cpp  config.hpp
src/utils/: thread_pool.hpp  thread_safe_queue.hpp
test/: CMakeLists.txt  test.cpp
test/utils_tests/: thread_pool_tests.cpp
